# CreativeProjects

./: .gitignore  PROXY_SETUP.md  README.md
.github/workflows/: photoanalyzer.yml
AIWallpaper/: .gitignore  Cargo.toml  README.md  build.rs  build_all.bat
AIWallpaper/bg/: index.html
AIWallpaper/scripts/: package-macos-dmg.sh
AIWallpaper/src/: api.rs  main.rs
AIWallpaper/ui/: index.html
AgentLearn/: README.md  fibonacci.py  my_coder.py
EnglishLearnHelper/: .gitignore  DESIGN.md  README.md
ErnieToolCallsWrapper/: OpenAIProxy.py  README.md  README_FULL.md  test_Proxy.py  test_ProxyToolCalls.py
FileStation/: README.md
LLMLabel/: .env.example  .gitignore  README.md  requirements.txt
LeadersPseudoIMBT/: .env.example  .gitignore  README.md  main.gradio.py  requirements.txt  start.py
Llama-cpp-ernie-tutorial/: .gitignore  README.md  client.py  convert_to_gguf.py  requirements.txt  server.py
MoEAllocator/: QuickStart.md  distributed-quickstart.md  quick_test.py  run_test.sh
OCodeController/: README.md
OCodeControllerBackend/: .env.example  .gitignore  README.md  requirements.txt
OhMyDashboard/: ROADMAP.md
OpenAIConcurrencyTesting/: .gitignore
OpenAIJsonWrapper/: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
OpenAIJsonWrapper/rust/: Cargo.toml  README.md
OpenAIJsonWrapper/rust/examples/: image_analysis_path.rs  image_analysis_url.rs  text_analysis.rs
OpenAIJsonWrapper/rust/src/: client.rs  lib.rs  types.rs  wrapper.rs
OpenAIRerankServer/: .dockerignore  .gitignore  Dockerfile  README.md  call_api.py  docker-compose.yml  fastapi_rerank_server.py  requirements.txt  rerank_demo.py
OpenCodeAndroid/: settings.gradle.kts
OpenCodeHarmony/: .gitignore  HardTODO.md  README.md  TODO.md  build-profile.json5  chatpage_97672e2.ets  chatpage_a663ee7.ets  chatpage_working.ets
OpenCodeServiceswithRknnLllm/: .gitignore  DEPLOY_GUIDE.md  README.md
PaddleOCR-VL-CPU/: .gitignore  README.md  demo_camera_ocr.py  demo_capture_camera.py  demo_ppocrvl_client.py  demo_ppocrvl_client_openai.py  demo_ppocrvl_server.py  requirements.txt
PaddleOCR-VL-GGUF/: .gitignore  README.md  demo_ppocrvl_gguf_client.py  demo_ppocrvl_gguf_server.py  export_vision_model.py  paddleocr_vl_client.py  vision_model_loader.py
PhotoAnalyzer/: .env.example  .gitignore  README.md  TODO.md  analyze_folder.py  analyze_single.py  convert_to_csv.py  requirements.txt  run.py  run_analyze.py
PhotoAnalyzer/desktop/: .gitignore  Cargo.toml  package.json  tauri.conf.json
PhotoAnalyzer/desktop/icons/: icon.icns
PhotoAnalyzer/desktop/src/: main.rs
PhotoAnalyzer/rust/: .gitignore  Cargo.toml
PhotoAnalyzer/rust/scripts/: compare_python_rust_api.py
PhotoAnalyzer/rust/src/: lib.rs  main.rs  models.rs  paths.rs  services.rs
PhotoAnalyzer/rust/src/handlers/: analysis.rs  dedup.rs  dirs.rs  files.rs  fs.rs  mod.rs  settings.rs  thumbnails.rs
PhotoAnalyzer/rust/src/services/: state.rs
QAGeneration/: requirements.txt
RagasTest/: .gitignore  ContextPrecision.py  mini_eval.py
RustModelInference/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  issue_track.md
RustModelInference/src/: lib.rs  main.rs  memory.rs  model.rs  ops.rs  quant.rs  thread_pool.rs  tokenizer.rs  traits.rs
TravelSites/: .env.example  .gitignore  README.md  matrix.py  plan.py  requirements.txt  run.py
VoiceStager/: .env.example  .gitignore  Cargo.toml  README.md  build.rs  build_all.bat  generate_icon.py  requirements_funasr.txt
VoiceStager/server/: funasr_server.py  whisper_server.py
VoiceStager/src/: asr.rs  asr.rs.bak  audio.rs  main.rs  test_symbols.rs
VoiceStager/src/app/: ipc.rs  mod.rs
VoiceStager/ui/: index.html  package-lock.json  package.json
VoiceStager/ui/src/: App.css  App.tsx  i18n.ts  index.css  ipc.ts
WatchAccMeasurer/: .gitignore  build-profile.json5  oh-package.json5
ZooGuide/: .gitignore  CHECKLIST.md  README.md  e2e_test.py  start.sh
skills/: .gitignore
utils/: generate_icon.py
(+487 files in other folders)
