[package]
name = "v-stage"
version = "0.1.0"
edition = "2021"

[dependencies]
tao = "0.16"
wry = "0.24"
tray-item = "0.9"
enigo = "0.2"
clipboard-win = "4.5"
windows-sys = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cpal = "0.15"
hound = "3.5"
include_dir = "0.7"
parking_lot = "0.12"
image = "0.24"
hotkey = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenvy = "0.15"

[build-dependencies]
image = "0.24"
winres = "0.1"
