[package]
name = "photo_analyzer_tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
photo_analyzer = { path = "../rust", features = ["embed-frontend"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
