[package]
name = "photo_analyzer"
version = "0.1.0"
edition = "2021"

[features]
default = []
embed-frontend = ["dep:rust-embed", "dep:mime_guess"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
image = "0.24"
once_cell = "1"
openaijsonwrapper = "0.2.0"
rust-embed = { version = "8", optional = true }
mime_guess = { version = "2", optional = true }
webbrowser = "1"
clap = { version = "4", features = ["derive"] }
